# autospider

./: .gitignore  Makefile  README.md  pyproject.toml
autospider/: __init__.py  __main__.py  autospider.py  context.py
autospider/action/: README.md  __init__.py  base.py  control.py  element.py  flow.py
autospider/storage/: sqlite3_.py
autospider/types/: action.py
examples/origin/: awscate.py
spider/action/: __init__.py  base.py  control.py  flow.py
spider/types/: action.py
tests/test_ecapi/: test_ecapi.py
tests/test_spider/: action.yaml  test_action.py
