[tool.poetry]
name = "autospider"
version = "0.1.0"
description = ""
authors = ["wwqdrh <huiloademail@163.com>"]
packages = [
    { include = "autospider" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
